apps/rancher/post-install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rancher.local.asztalos.net`)
      priority: 10
      services:
        - name: rancher
          namespace: cattle-system
          port: 80
  tls:
    secretName: local-asztalos-net-tls
